--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
         <div class="topic-content">
             <!-- one "card" which includes an image with a text below it -->
             <div class="topic-card">
-                <img src="images/placeholder-1024x1024.png" alt="change this too!">
+                <img src="images/placeholder-1024x1024.png" alt="very good pictures">
+                <h2 class="topic-card-text">images</h2>
+            </div>
+            <div class="topic-card">
+                <img src="images/placeholder-1024x1024.png" alt="incredible!!">
                 <h2 class="topic-card-text">Placeholder image</h2>
             </div>
             <div class="topic-card">
                 <img src="images/placeholder-1024x1024.png" alt="change this too!">
-                <h2 class="topic-card-text">Placeholder image</h2>
-            </div>
-            <div class="topic-card">
-                <img src="images/placeholder-1024x1024.png" alt="change this too!">
-                <h2 class="topic-card-text">Placeholder image</h2>
+                <h2 class="topic-card-text">more</h2>
             </div>
         </div>
     </section>
@@ -47,7 +47,7 @@
 
     <!-- A Simple Website Footer ------------------------------------------------------------------------------ -->
     <footer class="footer">
-        <p>&copy; 2025 My Showcase Website By Student Name</p>
+        <p>&copy; 2025 My Showcase Website By Zaki</p>
     </footer>
 
 <!-- The end of the whole page- no more content after this! -->
