--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Zaki's Website</title>
+    <title></title>
 </head>
 <!-- This is the main body of the website- ALL your content goes AFTER the <body> tag and before the </body> tag -->
 <body>
 
     <!-- The Hero Section -------------------------------------------------------------------------------------- -->
     <section class="hero">
-        <div class="hero-text">Zaki's Website</div>
+        <div class="hero-text"></div>
     </section>
 
 <!-- Topic one ------------------------------------------------------------------------------------------------- -->
@@ -20,27 +20,31 @@
     <section class="topic">
         <!-- the topic title a big bar with text in it -->
         <div class="topic-title">
-            <h1>Image Editing</h1>
+            <h1>Goats 🐐🐐🐐🥶🥶🥶</h1>
         </div>
         <!-- now a three column grid of images -->
         <div class="topic-content">
             <!-- one "card" which includes an image with a text below it -->
             <div class="topic-card">
-                <img src="images/placeholder-1024x1024.png" alt="very good pictures">
-                <h2 class="topic-card-text">images</h2>
+                <img src="images/anthony-manchester-united.gif" alt="very good pictures">
+                <h2 class="topic-card-text">Antony 🔥</h2>
             </div>
             <div class="topic-card">
-                <img src="images/placeholder-1024x1024.png" alt="incredible!!">
-                <h2 class="topic-card-text">Placeholder image</h2>
+                <img src="images/ronaldo.gif" alt="incredible!!">
+                <h2 class="topic-card-text">Ronaldo 😎</h2>
             </div>
             <div class="topic-card">
-                <img src="images/placeholder-1024x1024.png" alt="change this too!">
-                <h2 class="topic-card-text">more</h2>
+                <img src="images/all-of-the-lights-lebron-pregame.gif" alt="change this too!">
+                <h2 class="topic-card-text">Lebron 🗿</h2>
             </div>
         </div>
     </section>
 <!-- End of topic one------------------------------------------------------------------------------------------ -->
-
+<audio controls>
+    <source src="lebron.ogg" type="audio/ogg">
+    <source src="lebron.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+  </audio>
 <!-- Copy and paste the section from above to make your next section -->
 
 
