--- a/index.html
+++ b/index.html
@@ -36,15 +36,14 @@
             <div class="topic-card">
                 <img src="images/all-of-the-lights-lebron-pregame.gif" alt="change this too!">
                 <h2 class="topic-card-text">Lebron 🗿</h2>
+                <audio controls>
+                    <source src="lebron.ogg" >
+                </audio>
             </div>
         </div>
     </section>
 <!-- End of topic one------------------------------------------------------------------------------------------ -->
-<audio controls>
-    <source src="lebron.ogg" type="audio/ogg">
-    <source src="lebron.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-  </audio>
+
 <!-- Copy and paste the section from above to make your next section -->
 
 
