--- a/index.html
+++ b/index.html
@@ -44,8 +44,19 @@
     </section>
 <!-- End of topic one------------------------------------------------------------------------------------------ -->
 
-<!-- Copy and paste the section from above to make your next section -->
 
+<!-- Copy and paste the section from above to make your next section -->
+    <!-- The Second Topic Section -->
+    
+<video width="320" height="240" controls>
+
+# only use one of the below source codes)
+
+<source src="images/movie.mp4" type="video/mp4"> 
+
+<source src="image/movie.ogg" type="video/ogg"> 
+
+</video> 
 
 
     <!-- A Simple Website Footer ------------------------------------------------------------------------------ -->
