--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <div class="topic-card">
                 <img src="images/all-of-the-lights-lebron-pregame.gif" alt="change this too!">
                 <h2 class="topic-card-text">Lebron 🗿</h2>
-                <audio controls>
-                    <source src="lebron.ogg" >
+                <audio controls autoplay>
+                <source src="lebron.mp3" type="audio/mp3">
                 </audio>
             </div>
         </div>
@@ -45,7 +45,21 @@
 <!-- End of topic one------------------------------------------------------------------------------------------ -->
 
 <!-- Copy and paste the section from above to make your next section -->
+<section class="topic">
+    <!-- the topic title a big bar with text in it -->
+    <div class="topic-title">
+        <h1>Life is roblox!</h1>
+    </div>
+    <!-- now a three column grid of images -->
+    <div class="topic-content">
+       
+       
 
+        <video width="320" height="240" controls>
+            <source src="images/blueshirtmovie0001-0240.mp4" type="video/mp4"> 
+            </video> 
+    </div>
+</section>
 
 
     <!-- A Simple Website Footer ------------------------------------------------------------------------------ -->
