--- a/index.html
+++ b/index.html
@@ -46,7 +46,18 @@
 
 
 <!-- Copy and paste the section from above to make your next section -->
-
+ <section class="topic">
+<div class="topic-title">
+    <h1>life is roblox!</h1>
+</div>
+<section class="topic">
+        <div class="topic-card">
+            <video width="320" height="240" controls>
+                <source src="images/blueshirtmovie0001-0240.mp4" type="video/mp4">
+                </video> 
+        </div>
+    </div>
+</section>
 
 
     <!-- A Simple Website Footer ------------------------------------------------------------------------------ -->
