--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <img src="images/all-of-the-lights-lebron-pregame.gif" alt="change this too!">
                 <h2 class="topic-card-text">Lebron 🗿</h2>
                 <audio controls autoplay>
-                <source src="lebron.mp3" type="audio/mp3">
+                <source src="lebron.mp3" type="audio/mpeg">
                 </audio>
             </div>
         </div>
@@ -50,7 +50,6 @@
 <div class="topic-title">
     <h1>life is roblox!</h1>
 </div>
-<section class="topic">
         <div class="topic-card">
             <video width="320" height="240" controls>
                 <source src="images/blueshirtmovie0001-0240.mp4" type="video/mp4">
