--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <img src="images/all-of-the-lights-lebron-pregame.gif" alt="change this too!">
                 <h2 class="topic-card-text">Lebron 🗿</h2>
                 <audio controls autoplay>
-                <source src="lebron.mp3" type="audio/mpeg">
+                <source src="music/lebron.mp3" type="audio/mpeg">
                 </audio>
             </div>
         </div>
@@ -48,14 +48,14 @@
 <!-- Copy and paste the section from above to make your next section -->
  <section class="topic">
 <div class="topic-title">
-    <h1>life is roblox!</h1>
+    <h1>hard work</h1>
 </div>
-        <div class="topic-card">
-            <video width="320" height="240" controls>
-                <source src="images/blueshirtmovie0001-0240.mp4" type="video/mp4">
-                </video> 
-        </div>
-    </div>
+<div>
+    <video width="320" height="240" controls>
+        <source src="images/blueshirtmovie0001-0240.mp4" type="video/mp4">
+        </video> 
+</div>
+            <img width ="100" height="320" src="images/life-is-roblox-roblox.gif" alt="dj kahled">      
 </section>
 
 
