--- a/index.html
+++ b/index.html
@@ -51,13 +51,34 @@
     <h1>hard work</h1>
 </div>
 <div>
-    <video width="320" height="240" controls>
+    <video width="350" height="350" controls>
         <source src="images/blueshirtmovie0001-0240.mp4" type="video/mp4">
         </video> 
 </div>
-            <img width ="100" height="320" src="images/life-is-roblox-roblox.gif" alt="dj kahled">      
+<div>
+            <img width ="500" height="400" src="images/life-is-roblox-roblox.gif" alt="dj kahled">      
+</div>
 </section>
+<section class="topic">
+    <!-- the topic title a big bar with text in it -->
+    <div class="topic-title">
+        <h1>My next task</h1>
+    </div>
+    <!-- now a three column grid of images -->
+    <div class="topic-content">
+        <!-- one "card" which includes an image with a text below it -->
+        <div class="topic-card">
+            <img src="images/camera_bobo_2025-Jun-27_02-38-57AM-000_CustomizedView12745354625.png" alt="very good pictures">
+            <h2 class="topic-card-text">Camera</h2>
+        </div>
 
+     <div class="topic-content">
+            <!-- one "card" which includes an image with a text below it -->
+        <div class="topic-card">
+             <img src="images/Screenshot (2).png" alt="very good pictures">
+             <h2 class="topic-card-text">Back side (RIP)</h2>
+        </div>
+</section>
 
     <!-- A Simple Website Footer ------------------------------------------------------------------------------ -->
     <footer class="footer">
