--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
 <div class="topic-title">
     <h1>hard work</h1>
 </div>
-<div>
-    <video width="350" height="350" controls>
-        <source src="images/blueshirtmovie0001-0240.mp4" type="video/mp4">
-        </video> 
+<div class="topic-content">
+    <!-- one "card" which includes an image with a text below it -->
+<div class="topic-card">
+     <img src="images/blueshirtmovie0001-0240-ezgif.com-video-to-gif-converter.gif" alt="very good pictures">
+     <h2 class="topic-card-text">Blue shirt guy dance</h2>
 </div>
 <div>
             <img width ="500" height="400" src="images/life-is-roblox-roblox.gif" alt="dj kahled">      
@@ -68,16 +69,28 @@
     <div class="topic-content">
         <!-- one "card" which includes an image with a text below it -->
         <div class="topic-card">
-            <img src="images/camera_bobo_2025-Jun-27_02-38-57AM-000_CustomizedView12745354625.png" alt="very good pictures">
+            <img src="images/camera_bobo_2025-Jun-27_02-38-57AM-000_CustomizedView12745354625.png" alt="very good pictures" height = "120" width = "600">
             <h2 class="topic-card-text">Camera</h2>
         </div>
 
      <div class="topic-content">
             <!-- one "card" which includes an image with a text below it -->
         <div class="topic-card">
-             <img src="images/Screenshot (2).png" alt="very good pictures">
+             <img src="images/Screenshot (2).png" alt="very good pictures" style = "width:300px;height:500;">
              <h2 class="topic-card-text">Back side (RIP)</h2>
         </div>
+</section>
+<section class="topic">
+    <!-- the topic title a big bar with text in it -->
+    <div class="topic-title">
+        <h1>link to my cool game!</h1>
+    </div>
+    <!-- now a three column grid of images -->
+    <div class="topic-content">
+        <!-- one "card" which includes an image with a text below it -->
+        <a href="url">https://lebronbronbron.itch.io/escape-the-opps</a>
+            </div>
+
 </section>
 
     <!-- A Simple Website Footer ------------------------------------------------------------------------------ -->
