--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
     <!-- now a three column grid of images -->
     <div class="topic-content">
         <!-- one "card" which includes an image with a text below it -->
-        <a href="url">https://lebronbronbron.itch.io/escape-the-opps</a>
-            </div>
+        <a href="https://lebronbronbron.itch.io/escape-the-opps">Escape the opps</a>
+     </div>
 
 </section>
 
